@@ -261,33 +261,33 @@
 "OBIGT",1879,"diglycine-","aq","cal",-49.22,,565
 "OBIGT",1880,"triglycine+","aq","cal",,1.75,
 "OBIGT",1881,"triglycine-","aq","cal",,1.78,
-"OBIGT",1940,"hydromagnesite","cr","cal",,,-2569
-"OBIGT",2017,"jarosite","cr","cal",,,20697
-"OBIGT",2018,"natrojarosite","cr","cal",,,17554
-"OBIGT",2026,"realgar,alpha","cr","J",,,768
-"OBIGT",2027,"realgar,beta","cr","J",,,989
-"OBIGT",2028,"orpiment","cr","J",,,-1036
-"OBIGT",2036,"dawsonite","cr","J",,,19466
-"OBIGT",2038,"ferberite","cr","J",1.21,,
-"OBIGT",2051,"Co-pentlandite","cr","cal",,,-3630
-"OBIGT",2072,"octadecane","cr","cal",-2.63,,
-"OBIGT",2073,"nonadecane","cr","cal",-13.32,,
-"OBIGT",2074,"eicosane","cr","cal",-2.79,,
-"OBIGT",2075,"heneicosane","cr","cal",-8.61,,
-"OBIGT",2076,"docosane","cr","cal",-2.63,,
-"OBIGT",2077,"tricosane","cr","cal",-5.22,,
-"OBIGT",2078,"tetracosane","cr","cal",-2.02,,
-"OBIGT",2079,"pentacosane","cr","cal",-2.93,,
-"OBIGT",2080,"hexacosane","cr","cal",-1.29,,
-"OBIGT",2081,"heptacosane","cr","cal",-1.23,,
-"OBIGT",2133,"carbazole","cr","cal",-43.39,,
-"OBIGT",2174,"triphenylene","cr","cal",,,541
-"OBIGT",2487,"deoxyadenosine","cr","cal",,,-2977
-"OBIGT",2645,"ethylene","gas","cal",-4.59,,
-"OBIGT",2655,"3,5-dimethylphenol","gas","cal",,,628
-"OBIGT",2965,"nonacontane","liq","cal",,,635
-"OBIGT",2972,"2-methyloctane","liq","cal",10,,
-"OBIGT",3385,"5,6-dithiadecane","liq","cal",2,,
+"OBIGT",1941,"hydromagnesite","cr","cal",,,-2569
+"OBIGT",2018,"jarosite","cr","cal",,,20697
+"OBIGT",2019,"natrojarosite","cr","cal",,,17554
+"OBIGT",2027,"realgar,alpha","cr","J",,,768
+"OBIGT",2028,"realgar,beta","cr","J",,,989
+"OBIGT",2029,"orpiment","cr","J",,,-1036
+"OBIGT",2037,"dawsonite","cr","J",,,19466
+"OBIGT",2039,"ferberite","cr","J",1.21,,
+"OBIGT",2052,"Co-pentlandite","cr","cal",,,-3630
+"OBIGT",2073,"octadecane","cr","cal",-2.63,,
+"OBIGT",2074,"nonadecane","cr","cal",-13.32,,
+"OBIGT",2075,"eicosane","cr","cal",-2.79,,
+"OBIGT",2076,"heneicosane","cr","cal",-8.61,,
+"OBIGT",2077,"docosane","cr","cal",-2.63,,
+"OBIGT",2078,"tricosane","cr","cal",-5.22,,
+"OBIGT",2079,"tetracosane","cr","cal",-2.02,,
+"OBIGT",2080,"pentacosane","cr","cal",-2.93,,
+"OBIGT",2081,"hexacosane","cr","cal",-1.29,,
+"OBIGT",2082,"heptacosane","cr","cal",-1.23,,
+"OBIGT",2134,"carbazole","cr","cal",-43.39,,
+"OBIGT",2175,"triphenylene","cr","cal",,,541
+"OBIGT",2488,"deoxyadenosine","cr","cal",,,-2977
+"OBIGT",2646,"ethylene","gas","cal",-4.59,,
+"OBIGT",2656,"3,5-dimethylphenol","gas","cal",,,628
+"OBIGT",2966,"nonacontane","liq","cal",,,635
+"OBIGT",2973,"2-methyloctane","liq","cal",10,,
+"OBIGT",3386,"5,6-dithiadecane","liq","cal",2,,
 "DEW",8,"AlO2(SiO2)-","aq","cal",,,-897
 "DEW",17,"BO(OH)","aq","cal",,,-1111
 "DEW",19,"Ca(HCO3)+","aq","cal",,,-2971
@@ -357,15 +357,15 @@
 "SLOP98",169,"PdCl4-2","aq","cal",,-1.05,
 "SLOP98",171,"HNbO3","aq","cal",,,-1244
 "SUPCRT92",10,"almandine","cr","cal",4.43,,
-"SUPCRT92",26,"antigorite","cr","cal",,,812
-"SUPCRT92",41,"clinochlore,7A","cr","cal",,,666
-"SUPCRT92",57,"daphnite,14A","cr","cal",,,-836
-"SUPCRT92",82,"ferrosilite","cr","cal",,,694
-"SUPCRT92",83,"ferrosilite","cr2","cal",,,694
-"SUPCRT92",93,"glaucophane","cr","cal",-2.57,,
-"SUPCRT92",94,"greenalite","cr","cal",,,142507
-"SUPCRT92",96,"grunerite","cr","cal",9.72,,
-"SUPCRT92",97,"halloysite","cr","cal",-1.6,,
+"SUPCRT92",25,"antigorite","cr","cal",,,812
+"SUPCRT92",40,"clinochlore,7A","cr","cal",,,666
+"SUPCRT92",56,"daphnite,14A","cr","cal",,,-836
+"SUPCRT92",81,"ferrosilite","cr","cal",,,694
+"SUPCRT92",82,"ferrosilite","cr2","cal",,,694
+"SUPCRT92",92,"glaucophane","cr","cal",-2.57,,
+"SUPCRT92",93,"greenalite","cr","cal",,,142507
+"SUPCRT92",95,"grunerite","cr","cal",9.72,,
+"SUPCRT92",96,"halloysite","cr","cal",-1.6,,
 "OldAA",11,"alanate","aq","cal",-24.28,,
 "OldAA",24,"Fe(Gly)2","aq","cal",,,537
 "OldAA",50,"Fe(Ala)2","aq","cal",,,553
